2010-03-07  Albrecht Dreß

	* src/balsa-mime-widget-text.c: do not mangle quotation characters
	when copying text.

2010-03-04  Pawel Salek

	* src/balsa-mime-widget-crypto.c: set the parent right.

2010-03-03  Albrecht Dreß

	* libbalsa/misc.[hc]:
	* libbalsa/mailbox.c: make libbalsa_size_to_gchar() a common function.
	* src/folder-conf.c: use it for displaying IMAP quota.

2010-03-03  Peter Bloomfield

	* libbalsa/message.c (libbalsa_message_change_flags): check
	argument validity.
	* libbalsa/send.c (handle_successful_send): check that the
	message still belongs to a mailbox.

2010-03-03  Peter Bloomfield

	* libbalsa/address-view.c (libbalsa_address_view_get_list): do
	not append NULL list in internet_address_list_append.

2010-02-28  Peter Bloomfield

	* src/folder-conf.c (folder_conf_imap_sub_node): remove mnemonic
	from subfolder-of label.

2010-02-20  Peter Bloomfield

	* src/folder-conf.c (set_ok_sensitive),
	(folder_conf_imap_sub_node): clean up folder properties dialog
	and manage Update button sensitivity.
	* src/mailbox-conf.c (create_local_mailbox_dialog),
	(create_imap_mailbox_dialog), (mailbox_conf_view_new_full),
	(mailbox_conf_view_new): use callback to manage Update button
	sensitivity.
	* src/mailbox-conf.h: new API.
	* src/main-window.c: change mailbox Edit to Properties.

2010-02-20  Albrecht Dreß

	* src/folder-conf.c (folder_conf_imap_sub_node): use Cyrus
	server's standard names for rights.

2010-02-20  Pawel Salek

	* libbalsa/gmime-gpgme-signature.c: add missing #include config.h
	that broke rawhide build.
	* libbalsa/imap/imap-commands.c: issue SELECT+MYRIGHTS together
	whenever necessary to save one RTT.
	* libbalsa/imap/imap-handle.c: add imap_cmd_exec_cmds() helper.
	* libbalsa/imap/imap_private.h: and its prototype.

2010-02-19  Peter Bloomfield

	* configure.in: option to configure GMime-2.4 or 2.6.
	* libbalsa/gmime-gpgme-context.c (g_mime_gpgme_context_finalize),
	(g_mime_session_passphrase), (g_mime_gpgme_context_new):